server/webapp/WEB-INF/rails/webpack/views/pages/new_plugins/index.scss
/*
 * Copyright 2018 ThoughtWorks, Inc.
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 *     http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */
@import "../../global/common";

$collapse-icon-size: 30px;


.plugin-header {
  display:     flex;
  align-items: center;
}

.plugin-icon {
  display:        none;
  vertical-align: middle;
  margin:         0 15px 0 -15px;
  img {
    width:  $collapse-icon-size;
    height: $collapse-icon-size;
  }
  @media (min-width: $screen-md) {
    display: inline-block;
  }
}

.plugin-name {
  font-weight:  600;
  font-size:    13px;
  margin-right: 50px;
  @media (min-width: $screen-md) {
    font-size: 12px;
  }
  @media (min-width: $screen-lg) {
    font-size: 15px;
  }

}

.unknown-plugin-icon {
  @include icon-before($type: $fa-var-question, $color: $icon-light-color, $margin: 5px, $size: 30px);
  display: block;
}

.plugins-page {
  .key-value-pair-inline {
    margin-top: 20px;
  }
}

.plugins-list {
  display: block;
}

